# ynab-report

./: .gitignore  DATABOT.md  README.md  doc.qmd  fnox.toml  justfile  pyproject.toml  requirements.txt  ynab_spending_analysis.qmd
.posit/publish/: YNAB Report-02IP.toml  YNAB Report-OMDE.toml
.posit/publish/deployments/: deployment-C5T7.toml  deployment-M97V.toml
