[project]
name = "ynab-report"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.4.1",
    "arrow>=1.3.0",
    "great-tables>=0.13.0",
    "httpx>=0.27.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "polars-lts-cpu==1.11.0",
    "polars-u64-idx==1.11.0",
    "python-dotenv>=1.0.1",
]
